--- a/results/2020.md
+++ b/results/2020.md
@@ -1,58 +1,59 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-VARZOS | 11412
-COVID19 | 10880
-FLU4 | 6419
-PPV | 2556
-FLUX | 2026
-VARCEL | 1540
-PNC13 | 1512
-UNK | 1499
-HPV9 | 1455
-TDAP | 1334
-HEPA | 1118
-FLUC4 | 1071
-MMRV | 1043
-MMR | 1035
-MNQ | 936
-HIBV | 907
-RV5 | 904
-FLUR4 | 830
-HEP | 818
-TYP | 802
-MENB | 712
-FLUA4 | 686
-DTAPIPVHIB | 563
-DTAPIPV | 561
-DTAP | 554
-FLU3 | 425
-FLUA3 | 389
-DTAPHEPBIP | 357
-IPV | 302
-HPV4 | 193
-RV1 | 172
-RAB | 131
-TD | 118
-ANTH | 92
-HEPAB | 80
-MEN | 64
-PNC | 56
-FLUN4 | 47
+VARZOS | 12752
+COVID19 | 10398
+FLU4 | 6551
+PPV | 2948
+FLUX | 2343
+UNK | 1813
+VARCEL | 1696
+PNC13 | 1678
+HPV9 | 1570
+TDAP | 1473
+HEPA | 1221
+MMRV | 1198
+MMR | 1189
+FLUC4 | 1089
+MNQ | 1007
+HIBV | 987
+RV5 | 978
+HEP | 920
+FLUR4 | 846
+TYP | 809
+MENB | 750
+FLUA4 | 691
+DTAPIPVHIB | 635
+DTAPIPV | 632
+DTAP | 610
+FLU3 | 433
+FLUA3 | 391
+DTAPHEPBIP | 386
+IPV | 343
+HPV4 | 201
+RV1 | 185
+TD | 151
+RAB | 150
+ANTH | 104
+HEPAB | 84
+MEN | 67
+PNC | 59
+FLUN4 | 50
 JEV1 | 44
 SMALL | 30
-YF | 28
-TTOX | 28
+YF | 29
+TTOX | 29
+CHOL | 21
 FLUN3 | 20
-CHOL | 18
-DT | 13
+DT | 14
 HPVX | 11
 DTP | 8
+FLUR3 | 8
+RVX | 8
 FLUC3 | 8
-FLUR3 | 6
-RVX | 5
-ADEN_4_7 | 3
-BCG | 3
+BCG | 5
+ADEN_4_7 | 4
+EBZR | 3
 HPV2 | 2
 PNC10 | 1
 JEVX | 1
@@ -61,139 +62,143 @@ HBHEPB | 1
 RUB | 1
 MENHIB | 1
 DF | 1
+FLUX(H1N1) | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 10179
-COVID19-PFIZER\BIONTECH | 7727
-FLU4-SANOFI PASTEUR | 3667
-COVID19-MODERNA | 3132
-PPV-MERCK & CO. INC. | 2440
-FLUX-UNKNOWN MANUFACTURER | 2024
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1732
-VARCEL-MERCK & CO. INC. | 1518
-PNC13-PFIZER\WYETH | 1512
-UNK-UNKNOWN MANUFACTURER | 1499
-HPV9-MERCK & CO. INC. | 1455
-VARZOS-MERCK & CO. INC. | 1103
-FLUC4-SEQIRUS, INC. | 1071
-MMRV-MERCK & CO. INC. | 1042
-FLU4-SEQIRUS, INC. | 1020
-MMR-MERCK & CO. INC. | 1011
-RV5-MERCK & CO. INC. | 904
-FLUR4-PROTEIN SCIENCES CORPORATION | 830
-TYP-BERNA BIOTECH, LTD. | 748
-FLUA4-SEQIRUS, INC. | 686
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 661
-MNQ-SANOFI PASTEUR | 621
-TDAP-SANOFI PASTEUR | 593
-HEPA-MERCK & CO. INC. | 587
-DTAPIPVHIB-SANOFI PASTEUR | 562
-HIBV-MERCK & CO. INC. | 543
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 507
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 422
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 389
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 380
-FLU3-SANOFI PASTEUR | 366
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 357
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 352
-DTAP-SANOFI PASTEUR | 334
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 313
-HIBV-SANOFI PASTEUR | 310
-MENB-PFIZER\WYETH | 290
-IPV-SANOFI PASTEUR | 280
-HEP-MERCK & CO. INC. | 259
-DTAPIPV-SANOFI PASTEUR | 205
-HPV4-MERCK & CO. INC. | 193
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 186
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 172
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 134
-VARZOS-UNKNOWN MANUFACTURER | 130
-PPV-UNKNOWN MANUFACTURER | 116
-ANTH-EMERGENT BIOSOLUTIONS | 92
-TD-SANOFI PASTEUR | 83
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 80
-TDAP-UNKNOWN MANUFACTURER | 80
-MEN-UNKNOWN MANUFACTURER | 64
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 64
-RAB-SANOFI PASTEUR | 62
-PNC-PFIZER\WYETH | 56
-TYP-SANOFI PASTEUR | 52
-FLUN4-MEDIMMUNE VACCINES, INC. | 47
-HEP-UNKNOWN MANUFACTURER | 45
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 11451
+COVID19-PFIZER\BIONTECH | 7338
+FLU4-SANOFI PASTEUR | 3736
+COVID19-MODERNA | 3037
+PPV-MERCK & CO. INC. | 2821
+FLUX-UNKNOWN MANUFACTURER | 2340
+UNK-UNKNOWN MANUFACTURER | 1813
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1778
+PNC13-PFIZER\WYETH | 1678
+VARCEL-MERCK & CO. INC. | 1670
+HPV9-MERCK & CO. INC. | 1570
+MMRV-MERCK & CO. INC. | 1197
+MMR-MERCK & CO. INC. | 1164
+VARZOS-MERCK & CO. INC. | 1139
+FLUC4-SEQIRUS, INC. | 1089
+FLU4-SEQIRUS, INC. | 1037
+RV5-MERCK & CO. INC. | 978
+FLUR4-PROTEIN SCIENCES CORPORATION | 846
+TYP-BERNA BIOTECH, LTD. | 750
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 737
+FLUA4-SEQIRUS, INC. | 691
+MNQ-SANOFI PASTEUR | 671
+TDAP-SANOFI PASTEUR | 649
+HEPA-MERCK & CO. INC. | 642
+DTAPIPVHIB-SANOFI PASTEUR | 634
+HIBV-MERCK & CO. INC. | 574
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 548
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 449
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 407
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 397
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 391
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 386
+FLU3-SANOFI PASTEUR | 369
+DTAP-SANOFI PASTEUR | 366
+HIBV-SANOFI PASTEUR | 354
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 335
+IPV-SANOFI PASTEUR | 319
+HEP-MERCK & CO. INC. | 309
+MENB-PFIZER\WYETH | 301
+DTAPIPV-SANOFI PASTEUR | 231
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 204
+HPV4-MERCK & CO. INC. | 201
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 185
+VARZOS-UNKNOWN MANUFACTURER | 162
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 155
+PPV-UNKNOWN MANUFACTURER | 127
+TD-SANOFI PASTEUR | 114
+ANTH-EMERGENT BIOSOLUTIONS | 103
+TDAP-UNKNOWN MANUFACTURER | 87
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 84
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 75
+RAB-SANOFI PASTEUR | 70
+MEN-UNKNOWN MANUFACTURER | 67
+PNC-PFIZER\WYETH | 59
+TYP-SANOFI PASTEUR | 56
+FLUN4-MEDIMMUNE VACCINES, INC. | 50
+HEP-UNKNOWN MANUFACTURER | 49
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 45
 JEV1-INTERCELL AG | 44
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 41
-DTAP-UNKNOWN MANUFACTURER | 34
-FLU3-CSL LIMITED | 31
-YF-SANOFI PASTEUR | 27
-SMALL-SANOFI PASTEUR | 27
-MMR-UNKNOWN MANUFACTURER | 24
-HEPA-UNKNOWN MANUFACTURER | 24
-TTOX-UNKNOWN MANUFACTURER | 24
-IPV-UNKNOWN MANUFACTURER | 22
-COVID19-UNKNOWN MANUFACTURER | 21
+DTAP-UNKNOWN MANUFACTURER | 40
+FLU3-CSL LIMITED | 32
+HEPA-UNKNOWN MANUFACTURER | 31
+YF-SANOFI PASTEUR | 28
+SMALL-EMERGENT BIOSOLUTIONS | 27
+MMR-UNKNOWN MANUFACTURER | 25
+TTOX-UNKNOWN MANUFACTURER | 25
+IPV-UNKNOWN MANUFACTURER | 24
+COVID19-UNKNOWN MANUFACTURER | 23
+VARCEL-UNKNOWN MANUFACTURER | 22
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 22
+CHOL-PAXVAX | 21
 FLUN3-MEDIMMUNE VACCINES, INC. | 20
-VARCEL-UNKNOWN MANUFACTURER | 18
-TD-UNKNOWN MANUFACTURER | 18
-CHOL-PAXVAX | 18
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 18
+TD-UNKNOWN MANUFACTURER | 20
 TD-MASS. PUB HLTH BIOL LAB | 17
-HIBV-UNKNOWN MANUFACTURER | 13
+HIBV-UNKNOWN MANUFACTURER | 14
 HPVX-UNKNOWN MANUFACTURER | 11
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 9
+DT-SANOFI PASTEUR | 8
+FLUR3-PROTEIN SCIENCES CORPORATION | 8
+RVX-UNKNOWN MANUFACTURER | 8
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 8
 DTP-UNKNOWN MANUFACTURER | 7
-DT-SANOFI PASTEUR | 7
 DT-UNKNOWN MANUFACTURER | 6
-FLUR3-PROTEIN SCIENCES CORPORATION | 6
 RAB-UNKNOWN MANUFACTURER | 5
-RVX-UNKNOWN MANUFACTURER | 5
 DTAPIPV-UNKNOWN MANUFACTURER | 4
+ADEN_4_7-TEVA PHARMACEUTICALS | 4
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
-ADEN_4_7-TEVA PHARMACEUTICALS | 3
+FLUX-SANOFI PASTEUR | 3
 SMALL-UNKNOWN MANUFACTURER | 3
-FLUX-SANOFI PASTEUR | 2
-MNQ-UNKNOWN MANUFACTURER | 2
-TYP-UNKNOWN MANUFACTURER | 2
+TYP-UNKNOWN MANUFACTURER | 3
+BCG-UNKNOWN MANUFACTURER | 3
+EBZR-MERCK & CO. INC. | 3
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 2
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 2
-BCG-UNKNOWN MANUFACTURER | 2
+BCG-SANOFI PASTEUR | 2
 TTOX-SANOFI PASTEUR | 2
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU3-MEDEVA PHARMA, LTD. | 1
+MNQ-UNKNOWN MANUFACTURER | 1
 DTAPIPVHIB-UNKNOWN MANUFACTURER | 1
 YF-UNKNOWN MANUFACTURER | 1
 DTP-SANOFI PASTEUR | 1
 JEVX-UNKNOWN MANUFACTURER | 1
-BCG-SANOFI PASTEUR | 1
 DTOX-UNKNOWN MANUFACTURER | 1
 HBHEPB-MERCK & CO. INC. | 1
 MMRV-UNKNOWN MANUFACTURER | 1
 RUB-UNKNOWN MANUFACTURER | 1
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
 DF-SANOFI PASTEUR | 1
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 1
+ANTH-UNKNOWN MANUFACTURER | 1
 ---
 # Total Deaths
 Vax Type | Deaths
 --- | ---
 FLUX | 47
-PNC13 | 29
-FLU4 | 21
-VARZOS | 17
+PNC13 | 30
+FLU4 | 23
+VARZOS | 18
+DTAPHEPBIP | 17
 RV5 | 17
-DTAPHEPBIP | 16
 DTAPIPVHIB | 16
 COVID19 | 16
-HIBV | 13
+HIBV | 14
 HEP | 7
 UNK | 6
 RV1 | 6
 MEN | 6
 MMR | 5
+FLU3 | 4
 TDAP | 4
 HPV4 | 3
 VARCEL | 3
-FLU3 | 3
 PPV | 3
 HEPA | 3
 DTAP | 2
@@ -211,14 +216,14 @@ HPV9 | 1
 Vax ID | Deaths
 --- | ---
 FLUX-UNKNOWN MANUFACTURER | 47
-PNC13-PFIZER\WYETH | 29
+PNC13-PFIZER\WYETH | 30
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 17
 RV5-MERCK & CO. INC. | 17
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 16
 DTAPIPVHIB-SANOFI PASTEUR | 16
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 11
-FLU4-SANOFI PASTEUR | 11
+FLU4-SANOFI PASTEUR | 13
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 12
 COVID19-PFIZER\BIONTECH | 11
-HIBV-MERCK & CO. INC. | 9
+HIBV-MERCK & CO. INC. | 10
 FLU4-GLAXOSMITHKLINE BIOLOGICALS | 9
 UNK-UNKNOWN MANUFACTURER | 6
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 6
@@ -227,9 +232,9 @@ MMR-MERCK & CO. INC. | 5
 VARZOS-MERCK & CO. INC. | 5
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
 COVID19-MODERNA | 5
+FLU3-SANOFI PASTEUR | 4
 HPV4-MERCK & CO. INC. | 3
 VARCEL-MERCK & CO. INC. | 3
-FLU3-SANOFI PASTEUR | 3
 HEP-MERCK & CO. INC. | 2
 DTAP-SANOFI PASTEUR | 2
 HIBV-SANOFI PASTEUR | 2
@@ -258,59 +263,61 @@ HPV9-MERCK & CO. INC. | 1
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 45690
-VARZOS | 45193
-FLU4 | 23164
-PPV | 10249
-UNK | 6322
-PNC13 | 5714
-TDAP | 5334
-VARCEL | 4670
-HPV9 | 4646
-FLUX | 4577
-FLUC4 | 4076
-MMR | 3992
-MNQ | 3365
-HEPA | 3348
-MENB | 2818
-HEP | 2777
-FLUR4 | 2701
-MMRV | 2674
-HIBV | 2649
-FLUA4 | 2423
-RV5 | 2347
-DTAP | 2159
-DTAPIPVHIB | 1745
-DTAPIPV | 1717
-FLUA3 | 1511
-FLU3 | 1506
-TYP | 1430
-DTAPHEPBIP | 1322
-IPV | 1141
-ANTH | 618
-RV1 | 610
-HPV4 | 566
-RAB | 561
-TD | 428
-MEN | 292
+VARZOS | 50569
+COVID19 | 43401
+FLU4 | 23586
+PPV | 11544
+UNK | 7296
+PNC13 | 6265
+TDAP | 5789
+FLUX | 5165
+VARCEL | 4991
+HPV9 | 4925
+MMR | 4419
+FLUC4 | 4125
+MNQ | 3591
+HEPA | 3564
+HEP | 3036
+MENB | 2943
+MMRV | 2935
+HIBV | 2826
+FLUR4 | 2745
+RV5 | 2497
+FLUA4 | 2443
+DTAP | 2310
+DTAPIPV | 1902
+DTAPIPVHIB | 1872
+FLU3 | 1540
+FLUA3 | 1517
+TYP | 1471
+DTAPHEPBIP | 1420
+IPV | 1215
+ANTH | 653
+RV1 | 645
+RAB | 641
+HPV4 | 577
+TD | 485
+MEN | 297
 JEV1 | 275
-HEPAB | 241
+HEPAB | 262
 SMALL | 210
-YF | 195
-FLUN4 | 180
+YF | 197
+FLUN4 | 196
 PNC | 170
-TTOX | 135
-DT | 47
+TTOX | 139
+FLUR3 | 57
+CHOL | 56
+DT | 53
 HPVX | 41
-RVX | 37
+RVX | 40
 FLUN3 | 36
-FLUR3 | 35
 DTP | 33
-CHOL | 31
-ADEN_4_7 | 28
+ADEN_4_7 | 29
+BCG | 27
 FLUC3 | 25
-BCG | 24
 DTOX | 21
+FLUX(H1N1) | 14
+EBZR | 7
 HPV2 | 4
 HBHEPB | 4
 MENHIB | 3
@@ -321,112 +328,115 @@ JEVX | 1
 ---
 Vax ID | Symptoms
 --- | ---
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 42119
-COVID19-PFIZER\BIONTECH | 31766
-COVID19-MODERNA | 13828
-FLU4-SANOFI PASTEUR | 13133
-PPV-MERCK & CO. INC. | 9868
-UNK-UNKNOWN MANUFACTURER | 6322
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 5910
-PNC13-PFIZER\WYETH | 5714
-HPV9-MERCK & CO. INC. | 4646
-VARCEL-MERCK & CO. INC. | 4572
-FLUX-UNKNOWN MANUFACTURER | 4571
-FLU4-SEQIRUS, INC. | 4121
-FLUC4-SEQIRUS, INC. | 4076
-MMR-MERCK & CO. INC. | 3875
-FLUR4-PROTEIN SCIENCES CORPORATION | 2701
-MMRV-MERCK & CO. INC. | 2672
-VARZOS-MERCK & CO. INC. | 2638
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2514
-TDAP-SANOFI PASTEUR | 2478
-FLUA4-SEQIRUS, INC. | 2423
-RV5-MERCK & CO. INC. | 2347
-MNQ-SANOFI PASTEUR | 2320
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1742
-DTAPIPVHIB-SANOFI PASTEUR | 1738
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1643
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 1511
-HEPA-MERCK & CO. INC. | 1468
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 1433
-HIBV-MERCK & CO. INC. | 1403
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1322
-DTAP-SANOFI PASTEUR | 1277
-FLU3-SANOFI PASTEUR | 1268
-MENB-PFIZER\WYETH | 1175
-TYP-BERNA BIOTECH, LTD. | 1160
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1097
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1038
-IPV-SANOFI PASTEUR | 994
-HIBV-SANOFI PASTEUR | 941
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 698
-HEP-MERCK & CO. INC. | 673
-ANTH-EMERGENT BIOSOLUTIONS | 618
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 610
-DTAPIPV-SANOFI PASTEUR | 609
-HPV4-MERCK & CO. INC. | 566
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 477
-VARZOS-UNKNOWN MANUFACTURER | 436
-PPV-UNKNOWN MANUFACTURER | 381
-TDAP-UNKNOWN MANUFACTURER | 342
-MEN-UNKNOWN MANUFACTURER | 292
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 47281
+COVID19-PFIZER\BIONTECH | 29903
+COVID19-MODERNA | 13391
+FLU4-SANOFI PASTEUR | 13349
+PPV-MERCK & CO. INC. | 11135
+UNK-UNKNOWN MANUFACTURER | 7296
+PNC13-PFIZER\WYETH | 6265
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6055
+FLUX-UNKNOWN MANUFACTURER | 5151
+HPV9-MERCK & CO. INC. | 4925
+VARCEL-MERCK & CO. INC. | 4884
+MMR-MERCK & CO. INC. | 4297
+FLU4-SEQIRUS, INC. | 4182
+FLUC4-SEQIRUS, INC. | 4125
+MMRV-MERCK & CO. INC. | 2933
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2764
+VARZOS-MERCK & CO. INC. | 2751
+FLUR4-PROTEIN SCIENCES CORPORATION | 2745
+TDAP-SANOFI PASTEUR | 2650
+RV5-MERCK & CO. INC. | 2497
+MNQ-SANOFI PASTEUR | 2465
+FLUA4-SEQIRUS, INC. | 2443
+DTAPIPVHIB-SANOFI PASTEUR | 1865
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1850
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1733
+HEPA-MERCK & CO. INC. | 1558
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 1517
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 1505
+HIBV-MERCK & CO. INC. | 1466
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1420
+DTAP-SANOFI PASTEUR | 1358
+FLU3-SANOFI PASTEUR | 1278
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1226
+MENB-PFIZER\WYETH | 1210
+TYP-BERNA BIOTECH, LTD. | 1166
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1124
+IPV-SANOFI PASTEUR | 1066
+HIBV-SANOFI PASTEUR | 1038
+HEP-MERCK & CO. INC. | 759
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 752
+DTAPIPV-SANOFI PASTEUR | 665
+ANTH-EMERGENT BIOSOLUTIONS | 652
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 645
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 577
+HPV4-MERCK & CO. INC. | 577
+VARZOS-UNKNOWN MANUFACTURER | 537
+PPV-UNKNOWN MANUFACTURER | 409
+TDAP-UNKNOWN MANUFACTURER | 375
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 333
+MEN-UNKNOWN MANUFACTURER | 297
+TD-SANOFI PASTEUR | 295
+TYP-SANOFI PASTEUR | 294
+RAB-SANOFI PASTEUR | 294
 JEV1-INTERCELL AG | 275
-RAB-SANOFI PASTEUR | 274
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 273
-TYP-SANOFI PASTEUR | 260
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 241
-TD-SANOFI PASTEUR | 238
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 201
-HEP-UNKNOWN MANUFACTURER | 194
-YF-SANOFI PASTEUR | 192
-DTAP-UNKNOWN MANUFACTURER | 184
-SMALL-SANOFI PASTEUR | 183
-FLUN4-MEDIMMUNE VACCINES, INC. | 180
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 262
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 215
+DTAP-UNKNOWN MANUFACTURER | 200
+FLUN4-MEDIMMUNE VACCINES, INC. | 196
+HEP-UNKNOWN MANUFACTURER | 195
+YF-SANOFI PASTEUR | 194
+SMALL-EMERGENT BIOSOLUTIONS | 183
 PNC-PFIZER\WYETH | 170
-IPV-UNKNOWN MANUFACTURER | 147
-HEPA-UNKNOWN MANUFACTURER | 138
-FLU3-CSL LIMITED | 136
-TTOX-UNKNOWN MANUFACTURER | 128
-MMR-UNKNOWN MANUFACTURER | 117
-HIBV-UNKNOWN MANUFACTURER | 104
-TD-UNKNOWN MANUFACTURER | 102
-COVID19-UNKNOWN MANUFACTURER | 96
-TD-MASS. PUB HLTH BIOL LAB | 88
-VARCEL-UNKNOWN MANUFACTURER | 85
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 64
+HEPA-UNKNOWN MANUFACTURER | 156
+FLU3-CSL LIMITED | 149
+IPV-UNKNOWN MANUFACTURER | 149
+TTOX-UNKNOWN MANUFACTURER | 132
+MMR-UNKNOWN MANUFACTURER | 122
+HIBV-UNKNOWN MANUFACTURER | 107
+COVID19-UNKNOWN MANUFACTURER | 107
+TD-UNKNOWN MANUFACTURER | 105
+VARCEL-UNKNOWN MANUFACTURER | 94
+TD-MASS. PUB HLTH BIOL LAB | 85
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 75
+FLUR3-PROTEIN SCIENCES CORPORATION | 57
+CHOL-PAXVAX | 56
 HPVX-UNKNOWN MANUFACTURER | 41
-RVX-UNKNOWN MANUFACTURER | 37
+RVX-UNKNOWN MANUFACTURER | 40
 FLUN3-MEDIMMUNE VACCINES, INC. | 36
-FLUR3-PROTEIN SCIENCES CORPORATION | 35
+DT-SANOFI PASTEUR | 34
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 34
 DTP-UNKNOWN MANUFACTURER | 31
-CHOL-PAXVAX | 31
-ADEN_4_7-TEVA PHARMACEUTICALS | 28
-DT-SANOFI PASTEUR | 28
+ADEN_4_7-TEVA PHARMACEUTICALS | 29
 SMALL-UNKNOWN MANUFACTURER | 27
 FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 25
-BCG-SANOFI PASTEUR | 21
+BCG-SANOFI PASTEUR | 23
 DTOX-UNKNOWN MANUFACTURER | 21
 DT-UNKNOWN MANUFACTURER | 19
+FLUX-SANOFI PASTEUR | 14
 RAB-UNKNOWN MANUFACTURER | 14
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 14
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 13
 DTAPIPV-UNKNOWN MANUFACTURER | 11
-TYP-UNKNOWN MANUFACTURER | 10
-MNQ-UNKNOWN MANUFACTURER | 7
+TYP-UNKNOWN MANUFACTURER | 11
 DTAPIPVHIB-UNKNOWN MANUFACTURER | 7
-FLUX-SANOFI PASTEUR | 6
+EBZR-MERCK & CO. INC. | 7
 TTOX-GLAXOSMITHKLINE BIOLOGICALS | 5
 FLU3-MEDEVA PHARMA, LTD. | 4
 HPV2-GLAXOSMITHKLINE BIOLOGICALS | 4
+BCG-UNKNOWN MANUFACTURER | 4
 HBHEPB-MERCK & CO. INC. | 4
 YF-UNKNOWN MANUFACTURER | 3
-BCG-UNKNOWN MANUFACTURER | 3
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 3
 DF-SANOFI PASTEUR | 3
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 2
+MNQ-UNKNOWN MANUFACTURER | 2
 DTP-SANOFI PASTEUR | 2
 MMRV-UNKNOWN MANUFACTURER | 2
 RUB-UNKNOWN MANUFACTURER | 2
 TTOX-SANOFI PASTEUR | 2
 JEVX-UNKNOWN MANUFACTURER | 1
+ANTH-UNKNOWN MANUFACTURER | 1
 ---
