--- a/results/2021.md
+++ b/results/2021.md
@@ -1,69 +1,69 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 737587
-VARZOS | 14378
-UNK | 9826
-FLU4 | 5408
-HPV9 | 1833
-VARCEL | 1767
-TDAP | 1669
-PPV | 1627
-MMR | 1429
-HEPA | 1424
-MNQ | 1400
-HEP | 1386
-FLUX | 1365
-MMRV | 1240
-PNC13 | 1102
-HIBV | 933
-DTAP | 783
-MENB | 770
-DTAPIPV | 760
-RV5 | 733
-FLUA4 | 704
-FLUC4 | 695
-DTAPIPVHIB | 588
-FLUR4 | 536
+COVID19 | 733816
+VARZOS | 14366
+UNK | 9637
+FLU4 | 5423
+HPV9 | 1824
+VARCEL | 1754
+TDAP | 1668
+PPV | 1641
+MMR | 1416
+HEPA | 1416
+FLUX | 1407
+MNQ | 1399
+HEP | 1384
+MMRV | 1238
+PNC13 | 1096
+HIBV | 930
+DTAP | 778
+MENB | 768
+DTAPIPV | 758
+RV5 | 731
+FLUA4 | 703
+FLUC4 | 693
+DTAPIPVHIB | 587
+FLUR4 | 532
 DTAPHEPBIP | 438
-IPV | 416
+IPV | 415
 HEPAB | 195
 TYP | 194
-RAB | 186
-RV1 | 185
-FLU3 | 174
-TD | 168
-HPV4 | 143
-ANTH | 119
-FLUA3 | 105
+RAB | 189
+RV1 | 186
+FLU3 | 173
+TD | 169
+HPV4 | 142
+ANTH | 118
+FLUA3 | 104
 YF | 97
-FLUC3 | 66
-FLUN4 | 63
-MEN | 53
+FLUC3 | 65
+FLUN4 | 62
+MEN | 52
 ADEN_4_7 | 43
-EBZR | 40
-TTOX | 37
+EBZR | 39
+TTOX | 36
 DF | 30
-CHOL | 28
-SMALL | 27
-DT | 26
+CHOL | 26
+SMALL | 26
+DT | 25
 PNC | 25
 HPVX | 22
 DTPPVHBHPB | 22
 JEV1 | 17
-DTP | 14
+DTP | 15
 RVX | 13
 FLUX(H1N1) | 9
 6VAX-F | 8
 FLUN3 | 6
 BCG | 5
+COVID19-2 | 5
 OPV | 2
 FLU(H1N1) | 2
 JEVX | 2
 FLUR3 | 2
 PER | 1
 TDAPIPV | 1
-MENHIB | 1
 MNQHIB | 1
 DTPHEP | 1
 DTOX | 1
@@ -74,107 +74,108 @@ H5N1 | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 339868
-COVID19-PFIZER\BIONTECH | 332034
-COVID19-JANSSEN | 64080
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 10200
-UNK-UNKNOWN MANUFACTURER | 9825
-VARZOS-UNKNOWN MANUFACTURER | 3521
-FLU4-SANOFI PASTEUR | 2852
-HPV9-MERCK & CO. INC. | 1833
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1805
-VARCEL-MERCK & CO. INC. | 1741
-COVID19-UNKNOWN MANUFACTURER | 1605
-PPV-MERCK & CO. INC. | 1493
-MMR-MERCK & CO. INC. | 1393
-FLUX-UNKNOWN MANUFACTURER | 1341
-MMRV-MERCK & CO. INC. | 1235
-PNC13-PFIZER\WYETH | 1102
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 871
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 833
+COVID19-MODERNA | 342609
+COVID19-PFIZER\BIONTECH | 327242
+COVID19-JANSSEN | 62381
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 10186
+UNK-UNKNOWN MANUFACTURER | 9636
+VARZOS-UNKNOWN MANUFACTURER | 3526
+FLU4-SANOFI PASTEUR | 2848
+HPV9-MERCK & CO. INC. | 1824
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1814
+VARCEL-MERCK & CO. INC. | 1725
+COVID19-UNKNOWN MANUFACTURER | 1583
+PPV-MERCK & CO. INC. | 1504
+FLUX-UNKNOWN MANUFACTURER | 1383
+MMR-MERCK & CO. INC. | 1379
+MMRV-MERCK & CO. INC. | 1231
+PNC13-PFIZER\WYETH | 1096
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 868
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 836
 MNQ-SANOFI PASTEUR | 790
-FLU4-SEQIRUS, INC. | 751
-TDAP-SANOFI PASTEUR | 737
-RV5-MERCK & CO. INC. | 733
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 730
-FLUA4-SEQIRUS, INC. | 704
-FLUC4-SEQIRUS, INC. | 695
-VARZOS-MERCK & CO. INC. | 657
-HEPA-MERCK & CO. INC. | 646
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 599
-DTAPIPVHIB-SANOFI PASTEUR | 585
+FLU4-SEQIRUS, INC. | 761
+TDAP-SANOFI PASTEUR | 741
+RV5-MERCK & CO. INC. | 731
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 727
+FLUA4-SEQIRUS, INC. | 703
+FLUC4-SEQIRUS, INC. | 693
+VARZOS-MERCK & CO. INC. | 654
+HEPA-MERCK & CO. INC. | 641
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 598
+DTAPIPVHIB-SANOFI PASTEUR | 584
 MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 582
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 553
-FLUR4-PROTEIN SCIENCES CORPORATION | 536
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 552
+FLUR4-PROTEIN SCIENCES CORPORATION | 532
 DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 438
-HIBV-MERCK & CO. INC. | 396
-HIBV-SANOFI PASTEUR | 396
-IPV-SANOFI PASTEUR | 389
-DTAP-SANOFI PASTEUR | 360
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 347
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 249
-HEP-MERCK & CO. INC. | 234
-DTAPIPV-SANOFI PASTEUR | 204
+HIBV-SANOFI PASTEUR | 397
+HIBV-MERCK & CO. INC. | 393
+IPV-SANOFI PASTEUR | 388
+DTAP-SANOFI PASTEUR | 357
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 345
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 247
+HEP-MERCK & CO. INC. | 231
+DTAPIPV-SANOFI PASTEUR | 203
 HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 188
-MENB-PFIZER\WYETH | 188
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 185
-HPV4-MERCK & CO. INC. | 143
-PPV-UNKNOWN MANUFACTURER | 134
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 186
+MENB-PFIZER\WYETH | 186
+HPV4-MERCK & CO. INC. | 142
+PPV-UNKNOWN MANUFACTURER | 137
+TD-SANOFI PASTEUR | 119
 FLU3-SANOFI PASTEUR | 118
-TD-SANOFI PASTEUR | 118
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 117
-ANTH-EMERGENT BIOSOLUTIONS | 114
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 112
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 105
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 117
+ANTH-EMERGENT BIOSOLUTIONS | 113
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 104
 YF-SANOFI PASTEUR | 97
 TYP-BERNA BIOTECH, LTD. | 97
 TYP-SANOFI PASTEUR | 95
 DTAP-UNKNOWN MANUFACTURER | 73
 HEP-UNKNOWN MANUFACTURER | 69
-RAB-SANOFI PASTEUR | 66
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 66
-FLUN4-MEDIMMUNE VACCINES, INC. | 63
-TDAP-UNKNOWN MANUFACTURER | 61
-MEN-UNKNOWN MANUFACTURER | 50
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 65
+RAB-SANOFI PASTEUR | 64
+FLUN4-MEDIMMUNE VACCINES, INC. | 62
+TDAP-UNKNOWN MANUFACTURER | 59
+MEN-UNKNOWN MANUFACTURER | 49
 HEPA-UNKNOWN MANUFACTURER | 47
 ADEN_4_7-TEVA PHARMACEUTICALS | 43
-EBZR-MERCK & CO. INC. | 40
-TTOX-UNKNOWN MANUFACTURER | 36
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 35
-MMR-UNKNOWN MANUFACTURER | 35
+EBZR-MERCK & CO. INC. | 39
+MMR-UNKNOWN MANUFACTURER | 36
+TTOX-UNKNOWN MANUFACTURER | 35
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 34
 DF-SANOFI PASTEUR | 30
 TD-MASS. PUB HLTH BIOL LAB | 29
-CHOL-PAXVAX | 27
+CHOL-PAXVAX | 25
 PNC-PFIZER\WYETH | 25
 IPV-UNKNOWN MANUFACTURER | 25
-SMALL-SANOFI PASTEUR | 25
 FLUX-SANOFI PASTEUR | 24
-HIBV-UNKNOWN MANUFACTURER | 23
+SMALL-EMERGENT BIOSOLUTIONS | 24
+VARCEL-UNKNOWN MANUFACTURER | 23
+HIBV-UNKNOWN MANUFACTURER | 22
 HPVX-UNKNOWN MANUFACTURER | 22
-VARCEL-UNKNOWN MANUFACTURER | 22
 DTPPVHBHPB-MSP VACCINE COMPANY | 22
-DT-SANOFI PASTEUR | 20
 TD-UNKNOWN MANUFACTURER | 20
+DT-SANOFI PASTEUR | 19
 JEV1-INTERCELL AG | 17
+DTP-UNKNOWN MANUFACTURER | 14
 RVX-UNKNOWN MANUFACTURER | 13
-DTP-UNKNOWN MANUFACTURER | 13
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 12
 MNQ-UNKNOWN MANUFACTURER | 11
 FLU3-CSL LIMITED | 9
 FLUX(H1N1)-UNKNOWN MANUFACTURER | 9
 RAB-UNKNOWN MANUFACTURER | 8
+MMRV-UNKNOWN MANUFACTURER | 7
 DT-UNKNOWN MANUFACTURER | 6
 FLUN3-MEDIMMUNE VACCINES, INC. | 6
+VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 6
 ANTH-UNKNOWN MANUFACTURER | 5
-MMRV-UNKNOWN MANUFACTURER | 5
 HEPAB-UNKNOWN MANUFACTURER | 5
 6VAX-F-UNKNOWN MANUFACTURER | 5
 BCG-SANOFI PASTEUR | 4
-VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
 DTAPIPV-UNKNOWN MANUFACTURER | 3
 DTAPIPVHIB-UNKNOWN MANUFACTURER | 3
 DTAP-SMITHKLINE BEECHAM | 3
 MEN-SANOFI PASTEUR | 3
+COVID19-2-PFIZER\BIONTECH | 3
 TYP-UNKNOWN MANUFACTURER | 2
 OPV-UNKNOWN MANUFACTURER | 2
 SMALL-UNKNOWN MANUFACTURER | 2
@@ -182,12 +183,12 @@ HEPAB-SMITHKLINE BEECHAM | 2
 JEVX-UNKNOWN MANUFACTURER | 2
 FLUR3-PROTEIN SCIENCES CORPORATION | 2
 6VAX-F-SANOFI PASTEUR | 2
+COVID19-2-MODERNA | 2
 CHOL-UNKNOWN MANUFACTURER | 1
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 1
 PER-UNKNOWN MANUFACTURER | 1
 TD-GLAXOSMITHKLINE BIOLOGICALS | 1
 TDAPIPV-UNKNOWN MANUFACTURER | 1
-MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
 IPV-PASTEUR MERIEUX CONNAUGHT | 1
 FLU(H1N1)-SANOFI PASTEUR | 1
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 1
@@ -207,14 +208,15 @@ PNC10-GLAXOSMITHKLINE BIOLOGICALS | 1
 H5N1-SANOFI PASTEUR | 1
 HIBV-CONNAUGHT LABORATORIES | 1
 HEPA-SMITHKLINE BEECHAM | 1
+COVID19-NOVAVAX | 1
 ---
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 11467
-UNK | 189
-VARZOS | 51
-FLU4 | 40
+COVID19 | 11889
+UNK | 185
+VARZOS | 52
+FLU4 | 42
 FLUX | 24
 PNC13 | 22
 HEP | 13
@@ -230,10 +232,10 @@ VARCEL | 4
 TDAP | 4
 DTAP | 4
 HPV9 | 4
-RAB | 2
 MMRV | 2
 MEN | 2
 FLUA4 | 2
+RAB | 1
 MENB | 1
 FLUR4 | 1
 MNQ | 1
@@ -245,15 +247,15 @@ FLUC3 | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-PFIZER\BIONTECH | 5503
-COVID19-MODERNA | 4699
-COVID19-JANSSEN | 1225
-UNK-UNKNOWN MANUFACTURER | 189
-COVID19-UNKNOWN MANUFACTURER | 40
+COVID19-PFIZER\BIONTECH | 5657
+COVID19-MODERNA | 5071
+COVID19-JANSSEN | 1122
+UNK-UNKNOWN MANUFACTURER | 185
+COVID19-UNKNOWN MANUFACTURER | 39
 FLU4-SANOFI PASTEUR | 30
 FLUX-UNKNOWN MANUFACTURER | 23
 PNC13-PFIZER\WYETH | 22
-VARZOS-UNKNOWN MANUFACTURER | 20
+VARZOS-UNKNOWN MANUFACTURER | 21
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 19
 VARZOS-MERCK & CO. INC. | 12
 DTAPIPVHIB-SANOFI PASTEUR | 11
@@ -264,22 +266,22 @@ FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6
 HIBV-MERCK & CO. INC. | 6
 HEP-MERCK & CO. INC. | 6
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 6
+FLU4-SEQIRUS, INC. | 6
 MMR-MERCK & CO. INC. | 5
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 5
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4
 VARCEL-MERCK & CO. INC. | 4
 HPV9-MERCK & CO. INC. | 4
-FLU4-SEQIRUS, INC. | 4
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 3
 HIBV-SANOFI PASTEUR | 3
 DTAP-SANOFI PASTEUR | 3
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 3
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 2
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
 MMRV-MERCK & CO. INC. | 2
 MEN-UNKNOWN MANUFACTURER | 2
 FLUA4-SEQIRUS, INC. | 2
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 PPV-UNKNOWN MANUFACTURER | 1
 MENB-PFIZER\WYETH | 1
 FLUR4-PROTEIN SCIENCES CORPORATION | 1
@@ -296,62 +298,63 @@ FLUX-SANOFI PASTEUR | 1
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 3202163
-VARZOS | 47175
-UNK | 39154
-FLU4 | 19931
-PPV | 6341
-TDAP | 5897
-HPV9 | 5533
-VARCEL | 4641
-FLUX | 4283
-MNQ | 4167
-PNC13 | 4132
-MMR | 4080
-HEP | 3601
-HEPA | 3543
-MMRV | 2899
+COVID19 | 3172984
+VARZOS | 46902
+UNK | 38021
+FLU4 | 19988
+PPV | 6377
+TDAP | 5886
+HPV9 | 5495
+VARCEL | 4583
+FLUX | 4347
+MNQ | 4170
+PNC13 | 4082
+MMR | 4041
+HEP | 3592
+HEPA | 3526
+MMRV | 2885
 FLUC4 | 2811
-HIBV | 2801
-DTAP | 2688
-MENB | 2626
-FLUA4 | 2540
-RV5 | 2062
-DTAPIPV | 1937
-DTAPIPVHIB | 1691
-FLUR4 | 1563
-DTAPHEPBIP | 1408
-IPV | 1113
-HPV4 | 824
-RV1 | 630
-FLU3 | 609
-ANTH | 605
-RAB | 578
-TD | 551
-HEPAB | 516
+HIBV | 2786
+DTAP | 2665
+MENB | 2613
+FLUA4 | 2539
+RV5 | 2046
+DTAPIPV | 1930
+DTAPIPVHIB | 1688
+FLUR4 | 1533
+DTAPHEPBIP | 1412
+IPV | 1104
+HPV4 | 822
+RV1 | 637
+ANTH | 601
+FLU3 | 590
+RAB | 555
+TD | 552
+HEPAB | 515
 TYP | 488
-FLUA3 | 437
+FLUA3 | 436
 YF | 296
-FLUC3 | 254
-FLUN4 | 249
-SMALL | 240
-EBZR | 199
+FLUC3 | 253
+FLUN4 | 247
+SMALL | 236
+EBZR | 196
 ADEN_4_7 | 187
 DF | 176
-MEN | 124
-CHOL | 116
-TTOX | 116
+MEN | 123
 PNC | 105
-DT | 74
+CHOL | 104
+TTOX | 96
+DT | 71
 HPVX | 70
 RVX | 68
 JEV1 | 65
 JEVX | 59
-DTP | 47
+DTP | 48
 DTPPVHBHPB | 47
 FLUX(H1N1) | 35
 FLUR3 | 21
 6VAX-F | 20
+COVID19-2 | 20
 FLUN3 | 12
 OPV | 11
 BCG | 10
@@ -364,100 +367,99 @@ PNC10 | 4
 H5N1 | 4
 DTOX | 3
 MU | 3
-MENHIB | 1
 DTPHEP | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 1446451
-COVID19-PFIZER\BIONTECH | 1442907
-COVID19-JANSSEN | 305839
-UNK-UNKNOWN MANUFACTURER | 39147
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 36652
-FLU4-SANOFI PASTEUR | 10179
-VARZOS-UNKNOWN MANUFACTURER | 8674
-COVID19-UNKNOWN MANUFACTURER | 6966
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6595
-PPV-MERCK & CO. INC. | 5877
-HPV9-MERCK & CO. INC. | 5533
-VARCEL-MERCK & CO. INC. | 4581
-FLUX-UNKNOWN MANUFACTURER | 4245
-PNC13-PFIZER\WYETH | 4132
-MMR-MERCK & CO. INC. | 3910
-FLU4-SEQIRUS, INC. | 3157
-MMRV-MERCK & CO. INC. | 2885
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2877
+COVID19-MODERNA | 1453129
+COVID19-PFIZER\BIONTECH | 1415205
+COVID19-JANSSEN | 297820
+UNK-UNKNOWN MANUFACTURER | 38014
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 36409
+FLU4-SANOFI PASTEUR | 10173
+VARZOS-UNKNOWN MANUFACTURER | 8654
+COVID19-UNKNOWN MANUFACTURER | 6828
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 6624
+PPV-MERCK & CO. INC. | 5913
+HPV9-MERCK & CO. INC. | 5495
+VARCEL-MERCK & CO. INC. | 4519
+FLUX-UNKNOWN MANUFACTURER | 4309
+PNC13-PFIZER\WYETH | 4082
+MMR-MERCK & CO. INC. | 3870
+FLU4-SEQIRUS, INC. | 3191
+MMRV-MERCK & CO. INC. | 2869
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 2862
 FLUC4-SEQIRUS, INC. | 2811
-TDAP-SANOFI PASTEUR | 2785
-FLUA4-SEQIRUS, INC. | 2540
-MNQ-SANOFI PASTEUR | 2482
-RV5-MERCK & CO. INC. | 2062
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1875
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 1857
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1854
-VARZOS-MERCK & CO. INC. | 1849
-DTAPIPVHIB-SANOFI PASTEUR | 1685
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1643
-FLUR4-PROTEIN SCIENCES CORPORATION | 1563
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1408
-HEPA-MERCK & CO. INC. | 1393
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1323
-DTAP-SANOFI PASTEUR | 1312
-HIBV-MERCK & CO. INC. | 1144
-HIBV-SANOFI PASTEUR | 1104
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1050
-IPV-SANOFI PASTEUR | 1007
-HPV4-MERCK & CO. INC. | 824
-MENB-PFIZER\WYETH | 772
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 733
-HEP-MERCK & CO. INC. | 692
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 630
-DTAPIPV-SANOFI PASTEUR | 605
-ANTH-EMERGENT BIOSOLUTIONS | 532
+TDAP-SANOFI PASTEUR | 2795
+FLUA4-SEQIRUS, INC. | 2539
+MNQ-SANOFI PASTEUR | 2489
+RV5-MERCK & CO. INC. | 2046
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 1870
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 1868
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 1844
+VARZOS-MERCK & CO. INC. | 1839
+DTAPIPVHIB-SANOFI PASTEUR | 1682
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 1639
+FLUR4-PROTEIN SCIENCES CORPORATION | 1533
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1412
+HEPA-MERCK & CO. INC. | 1381
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 1319
+DTAP-SANOFI PASTEUR | 1295
+HIBV-MERCK & CO. INC. | 1131
+HIBV-SANOFI PASTEUR | 1105
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1044
+IPV-SANOFI PASTEUR | 998
+HPV4-MERCK & CO. INC. | 822
+MENB-PFIZER\WYETH | 769
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 721
+HEP-MERCK & CO. INC. | 684
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 637
+DTAPIPV-SANOFI PASTEUR | 602
+ANTH-EMERGENT BIOSOLUTIONS | 528
 PPV-UNKNOWN MANUFACTURER | 464
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 437
-FLU3-SANOFI PASTEUR | 418
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 399
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 373
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 436
+FLU3-SANOFI PASTEUR | 415
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 398
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 357
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 333
 DTAP-UNKNOWN MANUFACTURER | 323
 TYP-SANOFI PASTEUR | 323
-TD-SANOFI PASTEUR | 322
+TD-SANOFI PASTEUR | 323
 HEP-UNKNOWN MANUFACTURER | 317
 YF-SANOFI PASTEUR | 296
 HEPA-UNKNOWN MANUFACTURER | 274
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 254
-FLUN4-MEDIMMUNE VACCINES, INC. | 249
-TDAP-UNKNOWN MANUFACTURER | 235
-HIBV-UNKNOWN MANUFACTURER | 217
-SMALL-SANOFI PASTEUR | 204
-EBZR-MERCK & CO. INC. | 199
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 253
+FLUN4-MEDIMMUNE VACCINES, INC. | 247
+TDAP-UNKNOWN MANUFACTURER | 229
+HIBV-UNKNOWN MANUFACTURER | 214
+SMALL-EMERGENT BIOSOLUTIONS | 200
+EBZR-MERCK & CO. INC. | 196
 ADEN_4_7-TEVA PHARMACEUTICALS | 187
 DF-SANOFI PASTEUR | 176
-MMR-UNKNOWN MANUFACTURER | 168
-RAB-SANOFI PASTEUR | 163
+MMR-UNKNOWN MANUFACTURER | 169
+RAB-SANOFI PASTEUR | 156
 TYP-BERNA BIOTECH, LTD. | 130
-CHOL-PAXVAX | 114
 TD-UNKNOWN MANUFACTURER | 114
-MEN-UNKNOWN MANUFACTURER | 110
-TTOX-UNKNOWN MANUFACTURER | 109
 TD-MASS. PUB HLTH BIOL LAB | 109
+MEN-UNKNOWN MANUFACTURER | 109
 PNC-PFIZER\WYETH | 105
-FLU3-GLAXOSMITHKLINE BIOLOGICALS | 84
+CHOL-PAXVAX | 102
+TTOX-UNKNOWN MANUFACTURER | 89
 IPV-UNKNOWN MANUFACTURER | 78
 ANTH-UNKNOWN MANUFACTURER | 73
 HPVX-UNKNOWN MANUFACTURER | 70
+FLU3-GLAXOSMITHKLINE BIOLOGICALS | 68
 RVX-UNKNOWN MANUFACTURER | 68
 JEV1-INTERCELL AG | 65
 HEPAB-UNKNOWN MANUFACTURER | 61
-DT-SANOFI PASTEUR | 60
 JEVX-UNKNOWN MANUFACTURER | 59
+DT-SANOFI PASTEUR | 57
 HEPAB-SMITHKLINE BEECHAM | 56
+VARCEL-UNKNOWN MANUFACTURER | 54
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 54
 FLU3-CSL LIMITED | 53
-VARCEL-UNKNOWN MANUFACTURER | 53
 DTPPVHBHPB-MSP VACCINE COMPANY | 47
-DTP-UNKNOWN MANUFACTURER | 43
+DTP-UNKNOWN MANUFACTURER | 44
 RAB-UNKNOWN MANUFACTURER | 42
 MNQ-UNKNOWN MANUFACTURER | 42
 FLUX-SANOFI PASTEUR | 38
@@ -466,18 +468,19 @@ TYP-UNKNOWN MANUFACTURER | 35
 FLUX(H1N1)-UNKNOWN MANUFACTURER | 35
 FLUR3-PROTEIN SCIENCES CORPORATION | 21
 IPV-PASTEUR MERIEUX CONNAUGHT | 18
+MMRV-UNKNOWN MANUFACTURER | 16
+COVID19-2-PFIZER\BIONTECH | 15
 DT-UNKNOWN MANUFACTURER | 14
-MMRV-UNKNOWN MANUFACTURER | 14
 MEN-SANOFI PASTEUR | 14
 FLUN3-MEDIMMUNE VACCINES, INC. | 12
 OPV-UNKNOWN MANUFACTURER | 11
+VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 10
 IPV-PFIZER\WYETH | 10
 DTAPIPV-UNKNOWN MANUFACTURER | 9
 6VAX-F-UNKNOWN MANUFACTURER | 9
 BCG-SANOFI PASTEUR | 8
 6VAX-F-GLAXOSMITHKLINE BIOLOGICALS | 8
 TDAPIPV-UNKNOWN MANUFACTURER | 7
-VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 7
 UNK-MERCK & CO. INC. | 7
 TTOX-SANOFI PASTEUR | 7
 DTAPIPVHIB-UNKNOWN MANUFACTURER | 6
@@ -487,6 +490,7 @@ HEPATYP-GLAXOSMITHKLINE BIOLOGICALS | 6
 FLU(H1N1)-SANOFI PASTEUR | 5
 FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 5
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 5
+COVID19-2-MODERNA | 5
 DTP-SANOFI PASTEUR | 4
 PNC10-GLAXOSMITHKLINE BIOLOGICALS | 4
 H5N1-SANOFI PASTEUR | 4
@@ -499,7 +503,7 @@ CHOL-UNKNOWN MANUFACTURER | 2
 MMR-GLAXOSMITHKLINE BIOLOGICALS | 2
 BCG-UNKNOWN MANUFACTURER | 2
 HEP-SMITHKLINE BEECHAM | 2
-MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
+COVID19-NOVAVAX | 2
 DTPHEP-UNKNOWN MANUFACTURER | 1
 HEPA-SMITHKLINE BEECHAM | 1
 ---
